--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
     "daisyui": "^4.12.23",
-    "firebase": "^11.1.0",
+    "firebase": "^11.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
@@ -25,7 +26,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.15.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
